# room-rent

./: .env.example  .gitignore  pyproject.toml  run.py
api/: __init__.py  model.py
migrations/versions/: 99bd5f8bbc06_create_tables.py
src/: api.py  db.py  model.py
src/blueprints/: __init__.py  bill.py  room.py  tenant.py  transaction.py
src/services/: billing.py  electricity.py
